Dinamikusan generált fájlok eltávolítása és .gitignore frissítése
- hu_ip_list.rsc és hu_ip_list.txt eltávolítása a verziókezelésből
- .gitignore frissítése: hu_ip_list.rsc, hu_*.txt, *.tmp kizárása
- network_setup.md frissítése .rsc hivatkozásokkal
- A generált fájlok most csak a felhasználói oldalon keletkeznek

--- a/.gitignore
+++ b/.gitignore
@@ -116,4 +116,10 @@ ehthumbs.db
 Thumbs.db
 
 # Project specific
-# Megjegyzés: hu_ip_list.txt-t nem zárjuk ki, mert példaként hasznos lehet
+# Generated files - these are created dynamically by the application
+hu_ip_list.rsc
+hu_*.txt
+*.tmp
+
+# Megjegyzés: A hu_ip_list.rsc és a letöltött IP fájlok kizárása
+# ezek a felhasználói oldalon dinamikusan generálódnak
