feat: Add DShield Block list integration as third security source
- Added DShield Block list (feeds.dshield.org/block.txt) integration
- Implemented custom parser for tab-separated DShield format
- Added DSHIELD_BLOCK address list for MikroTik RouterOS
- Updated Flask server with /dshield_block.rsc endpoint
- Enhanced status endpoint and main page with DShield information
- Added automatic daily updates at 2:30 AM for DShield
- Updated .gitignore to exclude dshield_block.rsc and block_*.txt files
- Comprehensive three-source security platform: Hungarian IPs, Spamhaus DROP, DShield Block
- Fixed duplicate function definitions and improved error handling

--- a/.gitignore
+++ b/.gitignore
@@ -118,8 +118,12 @@ Thumbs.db
 # Project specific
 # Generated files - these are created dynamically by the application
 hu_ip_list.rsc
+spamhaus_drop.rsc
+dshield_block.rsc
 hu_*.txt
+drop_*.txt
+dshield_*.txt
 *.tmp
 
-# Megjegyzés: A hu_ip_list.rsc és a letöltött IP fájlok kizárása
+# Megjegyzés: A hu_ip_list.rsc, spamhaus_drop.rsc, dshield_block.rsc és a letöltött IP fájlok kizárása
 # ezek a felhasználói oldalon dinamikusan generálódnak
